# safeeveolution

./: ContractTestNotOkay01.sol  ContractTestNotOkay02 (1).sol  Dockerfile  IERC20.sol  IERC2612.sol  IWETH10.sol  README.md  WETH10.sol  erc20.sol  t.sol  tvirus.sol
2e70bb_12-02-2021_Dss_Flash/: IERC3156FlashBorrower.sol  flash.sol
4fcc9e_23-01-2021_Weth/: IERC3156FlashBorrower.sol  IERC3156FlashLender.sol  WETH10.sol
5f65ac_28-12-2020_Wrappes/: FlashBorrower.sol
5f65ac_28-12-2020_Wrappes/aave/: AaveDataTypes.sol  AaveERC3156.sol  AaveFlashBorrowerLike.sol  IERC3156.sol  LendingPoolAddressesProviderLike.sol  LendingPoolLike.sol
5f65ac_28-12-2020_Wrappes/aave/mocks/: ATokenMock.sol  LendingPoolAddressesProviderMock.sol  LendingPoolMock.sol
5f65ac_28-12-2020_Wrappes/dydx/: DYDXERC3156.sol
5f65ac_28-12-2020_Wrappes/dydx/libraries/: DYDXDataTypes.sol
5f65ac_28-12-2020_Wrappes/reference/: FlashLender.sol  SafeMath.sol
5f65ac_28-12-2020_Wrappes/uniswap/: UniswapERC3156.sol
5f65ac_28-12-2020_Wrappes/yield/: YieldDaiERC3156.sol  YieldFYDaiERC3156.sol
ERC1155Historico/: version1.sol
ERC3156DssFlash/18caa8/: DssFlash.sol  IERC3156FlashBorrower.sol
Experiment/Script/: go.mod  main.go
e524c1_09-03-2021_ArgoBytes/: ArgobytesAuth.sol  ArgobytesFlashBorrower.sol
verification-tool/: .env  Cargo.toml  README.md
verification-tool/contracts/: proxy.sol  registry.sol
verification-tool/src/: checker.rs  db.rs  deployer.rs  main.rs  parser.rs  proxy.rs  util.rs
verification-tool/src/output/: Token.sol  simple.sol
(+340 files in other folders)
