[package]
name = "tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.67"
assert-json-diff = "0.2.0"
voca_rs = "1.13.1"
bnf = "0.3.3"
pest = "2.0"
pest_derive = "2.0"
substring = "1.4.5"
execute = "0.2.9"
web3 = "0.17.0"
tokio = "1.10.0"
async-std = "1.9.0"
chrono = { version = "0.4.9" , features = ["serde"] }
bigdecimal = { version = "0.1.0" }
postgres={version="0.17.3", features=["with-chrono-0_4"]}
diesel={version="1.4.4", features=["postgres", "chrono"]}
dotenv="0.15.0"
rust-crypto = "^0.2"
rand = "0.7.3"
actix-rt = "*"
futures = "0.3.5"
ethabi = "6.0.1"
ethereum-types = "0.4"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "*"
